--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Client</title>
   
     <!-- 120 word description for SEO purposes goes here. Note: Usage of lang tag. -->
-    <meta name="description" lang="en" content="">
+    <meta name="description" lang="en" content="person_Information form">
     
     <!-- Keywords to help with SEO go here. Note: Usage of lang tag.  -->
-    <meta name="keywords" lang="en" content="">
+    <meta name="keywords" lang="en" content="info,data,form">
     
     <!-- View-port Basics: http://mzl.la/VYREaP -->
     <!-- This meta tag is used for mobile device to display the page without any zooming,
@@ -44,6 +44,52 @@
 
       </main>
       <!--main ends here-->
+      <form action="">
+        <div>
+          <label for="">firstname</label>
+          <input type="text" name="" id="">
+        </div>
+        <div>
+          <label for="">lastname</label>
+          <input type="text" name="" id="">
+        </div>
+        <div>
+          <label for="">salary</label>
+          <input type="radio" name="" id="" value="male">
+          <input type="radio" name="" id="" value="female">
+        </div>
+        <div>
+          <label for="">Address</label>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+        </div>
+        <div>
+          <input type="checkbox" name="" id="">
+        </div>
+        <div>
+          <input type="submit" value="submit">
+          <button>cancel</button>
+        </div>
+      </form>
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Lastname</th>
+          <th>Lastname</th>
+          <th>Gender</th>
+          <th>Address</th>
+          <th>Edit</th>
+          <th>Delete</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
 
       <!--footer starts here-->
       <footer>      
@@ -53,7 +99,7 @@
 
     </div>
     <!--container ends here-->
-    <script src="js/vendors/jquery-1.8.3.min.js"></script>
+    <!-- <script src="js/vendors/jquery-1.8.3.min.js"></script> -->
     <script src="js/script.js"></script>
   </body>
 </html>
